# EcoSeg

./: .gitignore  Species Segmentation.md  pyproject.toml
ecoseg/: __init__.py  __main__.py
ecoseg/data/: __init__.py  dicom_loader.py
ecoseg/experiments/: __init__.py  growcut_experiment.py  runner.py
ecoseg/metrics/: __init__.py  scoring.py
ecoseg/models/: __init__.py  ecosegnet.py  embedding_cache.py  growcut_embedding.py  head_trainer.py  inference.py  learned_fitness.py  species.py  trainer.py
ecoseg/server/: __init__.py  app.py
tests/: test_core.py  test_growcut.py  test_growcut_debug.py  test_growcut_debug2.py  test_growcut_real.py  test_integration.py  test_stride_sweep.py
